style: fix container spacing

--- a/frontend/src/scss/settings.scss
+++ b/frontend/src/scss/settings.scss
@@ -110,6 +110,7 @@
   ),
   $button-text-letter-spacing: 0.25px,
   $chip-icon-size-multiplier: 1,
+  $container-padding-x: 12px,
   $button-text-transform: none,
   $bottom-navigation-min-width: 60px,
   $menu-content-border-radius: 0 0 4px 4px,
